# EQ-Overlay

./: .gitignore  README.md  config.json  config.json.bak  pyproject.toml  run.py
Archive/: README.md
Archive/eq_overlay/: config.py  main.py
Archive/eq_overlay/chat/: conversation_manager.py  widgets.py
Archive/eq_overlay/core/: __init__.py  duration.py  eq_utils.py  signals.py
Archive/eq_overlay/timers/: timer_panel.py  widgets.py
Archive/eq_overlay/ui/: __init__.py  notifications.py
Archive/eq_overlay/ui/widgets/: bar.py
eq_overlay/: __init__.py  config.py  main.py
eq_overlay/chat/: __init__.py  chat_panel.py  widgets.py
eq_overlay/core/: data.py  log_parser.py  log_watcher.py
eq_overlay/timers/: __init__.py  spell_database.py  timer_manager.py  timer_panel.py  widgets.py
eq_overlay/ui/: base_window.py  notifications.py  settings_dialog.py  theme.py
eq_overlay/ui/widgets/: __init__.py
